--- a/styles.css
+++ b/styles.css
@@ -42,3 +42,18 @@ p {
     color: #FFD700;
     font-size: 18px;
 }
+footer {
+    margin-top: 50px;
+}
+.footer-image {
+    vertical-align: middle;
+    margin-right: 10px;
+}
+footer a {
+    color: #FFD700;
+    text-decoration: none;
+    font-size: 18px;
+}
+footer a:hover {
+    text-decoration: underline;
+}
